include/ufsecp/ufsecp.h


typedef struct ufsecp_ctx ufsecp_ctx;
UFSECP_API ufsecp_error_t ufsecp_ctx_create(ufsecp_ctx** ctx_out);
UFSECP_API ufsecp_error_t ufsecp_ctx_clone(const ufsecp_ctx* src,
                                           ufsecp_ctx** ctx_out);
UFSECP_API void ufsecp_ctx_destroy(ufsecp_ctx* ctx);
UFSECP_API ufsecp_error_t ufsecp_last_error(const ufsecp_ctx* ctx);
UFSECP_API const char* ufsecp_last_error_msg(const ufsecp_ctx* ctx);
UFSECP_API ufsecp_error_t ufsecp_seckey_verify(const ufsecp_ctx* ctx,
                                               const uint8_t privkey[32]);
UFSECP_API ufsecp_error_t ufsecp_seckey_negate(ufsecp_ctx* ctx,
                                               uint8_t privkey[32]);
UFSECP_API ufsecp_error_t ufsecp_seckey_tweak_add(ufsecp_ctx* ctx,
                                                  uint8_t privkey[32],
                                                  const uint8_t tweak[32]);
UFSECP_API ufsecp_error_t ufsecp_seckey_tweak_mul(ufsecp_ctx* ctx,
                                                  uint8_t privkey[32],
                                                  const uint8_t tweak[32]);
UFSECP_API ufsecp_error_t ufsecp_pubkey_create(ufsecp_ctx* ctx,
                                               const uint8_t privkey[32],
                                               uint8_t pubkey33_out[33]);
UFSECP_API ufsecp_error_t ufsecp_pubkey_create_uncompressed(
    ufsecp_ctx* ctx,
    const uint8_t privkey[32],
    uint8_t pubkey65_out[65]);
UFSECP_API ufsecp_error_t ufsecp_pubkey_parse(ufsecp_ctx* ctx,
                                              const uint8_t* input,
                                              size_t input_len,
                                              uint8_t pubkey33_out[33]);
UFSECP_API ufsecp_error_t ufsecp_pubkey_xonly(ufsecp_ctx* ctx,
                                              const uint8_t privkey[32],
                                              uint8_t xonly32_out[32]);
UFSECP_API ufsecp_error_t ufsecp_ecdsa_sign(ufsecp_ctx* ctx,
                                            const uint8_t msg32[32],
                                            const uint8_t privkey[32],
                                            uint8_t sig64_out[64]);
UFSECP_API ufsecp_error_t ufsecp_ecdsa_verify(ufsecp_ctx* ctx,
                                              const uint8_t msg32[32],
                                              const uint8_t sig64[64],
                                              const uint8_t pubkey33[33]);
UFSECP_API ufsecp_error_t ufsecp_ecdsa_sig_to_der(ufsecp_ctx* ctx,
                                                   const uint8_t sig64[64],
                                                   uint8_t* der_out,
                                                   size_t* der_len);
UFSECP_API ufsecp_error_t ufsecp_ecdsa_sig_from_der(ufsecp_ctx* ctx,
                                                    const uint8_t* der,
                                                    size_t der_len,
                                                    uint8_t sig64_out[64]);
UFSECP_API ufsecp_error_t ufsecp_ecdsa_sign_recoverable(
    ufsecp_ctx* ctx,
    const uint8_t msg32[32],
    const uint8_t privkey[32],
    uint8_t sig64_out[64],
    int* recid_out);
UFSECP_API ufsecp_error_t ufsecp_ecdsa_recover(ufsecp_ctx* ctx,
                                               const uint8_t msg32[32],
                                               const uint8_t sig64[64],
                                               int recid,
                                               uint8_t pubkey33_out[33]);
UFSECP_API ufsecp_error_t ufsecp_schnorr_sign(ufsecp_ctx* ctx,
                                              const uint8_t msg32[32],
                                              const uint8_t privkey[32],
                                              const uint8_t aux_rand[32],
                                              uint8_t sig64_out[64]);
UFSECP_API ufsecp_error_t ufsecp_schnorr_verify(ufsecp_ctx* ctx,
                                                const uint8_t msg32[32],
                                                const uint8_t sig64[64],
                                                const uint8_t pubkey_x[32]);
UFSECP_API ufsecp_error_t ufsecp_ecdh(ufsecp_ctx* ctx,
                                      const uint8_t privkey[32],
                                      const uint8_t pubkey33[33],
                                      uint8_t secret32_out[32]);
UFSECP_API ufsecp_error_t ufsecp_ecdh_xonly(ufsecp_ctx* ctx,
                                            const uint8_t privkey[32],
                                            const uint8_t pubkey33[33],
                                            uint8_t secret32_out[32]);
UFSECP_API ufsecp_error_t ufsecp_ecdh_raw(ufsecp_ctx* ctx,
                                          const uint8_t privkey[32],
                                          const uint8_t pubkey33[33],
                                          uint8_t secret32_out[32]);
UFSECP_API ufsecp_error_t ufsecp_sha256(const uint8_t* data, size_t len,
                                        uint8_t digest32_out[32]);
UFSECP_API ufsecp_error_t ufsecp_hash160(const uint8_t* data, size_t len,
                                         uint8_t digest20_out[20]);
UFSECP_API ufsecp_error_t ufsecp_tagged_hash(const char* tag,
                                             const uint8_t* data, size_t len,
                                             uint8_t digest32_out[32]);
UFSECP_API ufsecp_error_t ufsecp_addr_p2pkh(ufsecp_ctx* ctx,
                                            const uint8_t pubkey33[33],
                                            int network,
                                            char* addr_out, size_t* addr_len);
UFSECP_API ufsecp_error_t ufsecp_addr_p2wpkh(ufsecp_ctx* ctx,
                                             const uint8_t pubkey33[33],
                                             int network,
                                             char* addr_out, size_t* addr_len);
UFSECP_API ufsecp_error_t ufsecp_addr_p2tr(ufsecp_ctx* ctx,
                                           const uint8_t internal_key_x[32],
                                           int network,
                                           char* addr_out, size_t* addr_len);
UFSECP_API ufsecp_error_t ufsecp_wif_encode(ufsecp_ctx* ctx,
                                            const uint8_t privkey[32],
                                            int compressed, int network,
                                            char* wif_out, size_t* wif_len);
UFSECP_API ufsecp_error_t ufsecp_wif_decode(ufsecp_ctx* ctx,
                                            const char* wif,
                                            uint8_t privkey32_out[32],
                                            int* compressed_out,
                                            int* network_out);
typedef struct {
    uint8_t data[UFSECP_BIP32_SERIALIZED_LEN];
    uint8_t is_private;   
    uint8_t _pad[3];      
} ufsecp_bip32_key;
UFSECP_API ufsecp_error_t ufsecp_bip32_master(ufsecp_ctx* ctx,
                                              const uint8_t* seed, size_t seed_len,
                                              ufsecp_bip32_key* key_out);
UFSECP_API ufsecp_error_t ufsecp_bip32_derive(ufsecp_ctx* ctx,
                                              const ufsecp_bip32_key* parent,
                                              uint32_t index,
                                              ufsecp_bip32_key* child_out);
UFSECP_API ufsecp_error_t ufsecp_bip32_derive_path(ufsecp_ctx* ctx,
                                                   const ufsecp_bip32_key* master,
                                                   const char* path,
                                                   ufsecp_bip32_key* key_out);
UFSECP_API ufsecp_error_t ufsecp_bip32_privkey(ufsecp_ctx* ctx,
                                               const ufsecp_bip32_key* key,
                                               uint8_t privkey32_out[32]);
UFSECP_API ufsecp_error_t ufsecp_bip32_pubkey(ufsecp_ctx* ctx,
                                              const ufsecp_bip32_key* key,
                                              uint8_t pubkey33_out[33]);
UFSECP_API ufsecp_error_t ufsecp_taproot_output_key(
    ufsecp_ctx* ctx,
    const uint8_t internal_x[32],
    const uint8_t* merkle_root,
    uint8_t output_x_out[32],
    int* parity_out);
UFSECP_API ufsecp_error_t ufsecp_taproot_tweak_seckey(
    ufsecp_ctx* ctx,
    const uint8_t privkey[32],
    const uint8_t* merkle_root,
    uint8_t tweaked32_out[32]);
UFSECP_API ufsecp_error_t ufsecp_taproot_verify(
    ufsecp_ctx* ctx,
    const uint8_t output_x[32], int output_parity,
    const uint8_t internal_x[32],
    const uint8_t* merkle_root, size_t merkle_root_len);