bindings/csharp/Ufsecp/Ufsecp.cs

// UltrafastSecp256k1 — C# P/Invoke binding (ufsecp stable C ABI v1).
//
// High-performance secp256k1 elliptic curve cryptography with dual-layer
// constant-time architecture. Context-based API.
//
// Usage:
//   using var ctx = new Ufsecp();
//   byte[] pub = ctx.PubkeyCreate(privkey);

#nullable enable
using System;
using System.Runtime.InteropServices;
using System.Text;

namespace Ultrafast.Ufsecp
{
    /// <summary>Error codes returned by ufsecp functions.</summary>
    public enum UfsecpErrorCode
    {
        Ok              = 0,
        NullArg         = 1,
        BadKey          = 2,
        BadPubkey       = 3,
        BadSig          = 4,
        BadInput        = 5,
        VerifyFail      = 6,
        Arith           = 7,
        Selftest        = 8,
        Internal        = 9,
        BufTooSmall     = 10,
    }

    /// <summary>Network type for address generation.</summary>
    public enum Network { Mainnet = 0, Testnet = 1 }

    /// <summary>Exception thrown when a ufsecp C function returns an error.</summary>
    public class UfsecpException : Exception
    {
        public string Operation { get; }
        public UfsecpErrorCode ErrorCode { get; }

        public UfsecpException(string op, UfsecpErrorCode code)
            : base($"ufsecp {op} failed: {code}") { Operation = op; ErrorCode = code; }
    }

    /// <summary>Recoverable signature result.</summary>
    public readonly record struct RecoverableSignature(byte[] Signature, int RecoveryId);

    /// <summary>WIF decode result.</summary>
    public readonly record struct WifDecoded(byte[] Privkey, bool Compressed, Network Network);

    /// <summary>Taproot output key result.</summary>
    public readonly record struct TaprootOutputKeyResult(byte[] OutputKeyX, int Parity);

    // ── Native interop ─────────────────────────────────────────────────

    internal static class Native
    {
        private const string Lib = "ufsecp";

        // Context
        [DllImport(Lib)] internal static extern int ufsecp_ctx_create(out IntPtr ctx);
        [DllImport(Lib)] internal static extern void ufsecp_ctx_destroy(IntPtr ctx);
        [DllImport(Lib)] internal static extern int ufsecp_ctx_clone(IntPtr src, out IntPtr dst);

        // Version
        [DllImport(Lib)] internal static extern uint ufsecp_version();
        [DllImport(Lib)] internal static extern uint ufsecp_abi_version();
        [DllImport(Lib)] internal static extern IntPtr ufsecp_version_string();
        [DllImport(Lib)] internal static extern IntPtr ufsecp_error_str(int err);
        [DllImport(Lib)] internal static extern int ufsecp_last_error(IntPtr ctx);
        [DllImport(Lib)] internal static extern IntPtr ufsecp_last_error_msg(IntPtr ctx);

        // Key ops
        [DllImport(Lib)] internal static extern int ufsecp_pubkey_create(IntPtr ctx, byte[] privkey, byte[] pubkey33);
        [DllImport(Lib)] internal static extern int ufsecp_pubkey_create_uncompressed(IntPtr ctx, byte[] privkey, byte[] pubkey65);
        [DllImport(Lib)] internal static extern int ufsecp_pubkey_parse(IntPtr ctx, byte[] input, nuint len, byte[] pubkey33);
        [DllImport(Lib)] internal static extern int ufsecp_pubkey_xonly(IntPtr ctx, byte[] privkey, byte[] xonly32);
        [DllImport(Lib)] internal static extern int ufsecp_seckey_verify(IntPtr ctx, byte[] privkey);
        [DllImport(Lib)] internal static extern int ufsecp_seckey_negate(IntPtr ctx, byte[] privkey);
        [DllImport(Lib)] internal static extern int ufsecp_seckey_tweak_add(IntPtr ctx, byte[] privkey, byte[] tweak);
        [DllImport(Lib)] internal static extern int ufsecp_seckey_tweak_mul(IntPtr ctx, byte[] privkey, byte[] tweak);

        // ECDSA
        [DllImport(Lib)] internal static extern int ufsecp_ecdsa_sign(IntPtr ctx, byte[] msg32, byte[] privkey, byte[] sig64);
        [DllImport(Lib)] internal static extern int ufsecp_ecdsa_verify(IntPtr ctx, byte[] msg32, byte[] sig64, byte[] pubkey33);
        [DllImport(Lib)] internal static extern int ufsecp_ecdsa_sig_to_der(IntPtr ctx, byte[] sig64, byte[] der, ref nuint len);
        [DllImport(Lib)] internal static extern int ufsecp_ecdsa_sig_from_der(IntPtr ctx, byte[] der, nuint len, byte[] sig64);

        // Recovery
        [DllImport(Lib)] internal static extern int ufsecp_ecdsa_sign_recoverable(IntPtr ctx, byte[] msg32, byte[] privkey, byte[] sig64, out int recid);
        [DllImport(Lib)] internal static extern int ufsecp_ecdsa_recover(IntPtr ctx, byte[] msg32, byte[] sig64, int recid, byte[] pubkey33);

        // Schnorr
        [DllImport(Lib)] internal static extern int ufsecp_schnorr_sign(IntPtr ctx, byte[] msg32, byte[] privkey, byte[] auxRand, byte[] sig64);
        [DllImport(Lib)] internal static extern int ufsecp_schnorr_verify(IntPtr ctx, byte[] msg32, byte[] sig64, byte[] pubkeyX);

        // ECDH
        [DllImport(Lib)] internal static extern int ufsecp_ecdh(IntPtr ctx, byte[] privkey, byte[] pubkey33, byte[] secret32);
        [DllImport(Lib)] internal static extern int ufsecp_ecdh_xonly(IntPtr ctx, byte[] privkey, byte[] pubkey33, byte[] secret32);
        [DllImport(Lib)] internal static extern int ufsecp_ecdh_raw(IntPtr ctx, byte[] privkey, byte[] pubkey33, byte[] secret32);

        // Hashing
        [DllImport(Lib)] internal static extern int ufsecp_sha256(byte[] data, nuint len, byte[] digest32);
        [DllImport(Lib)] internal static extern int ufsecp_hash160(byte[] data, nuint len, byte[] digest20);
        [DllImport(Lib)] internal static extern int ufsecp_tagged_hash([MarshalAs(UnmanagedType.LPUTF8Str)] string tag, byte[] data, nuint len, byte[] digest32);

        // Addresses
        [DllImport(Lib)] internal static extern int ufsecp_addr_p2pkh(IntPtr ctx, byte[] pubkey33, int network, byte[] addr, ref nuint len);
        [DllImport(Lib)] internal static extern int ufsecp_addr_p2wpkh(IntPtr ctx, byte[] pubkey33, int network, byte[] addr, ref nuint len);
        [DllImport(Lib)] internal static extern int ufsecp_addr_p2tr(IntPtr ctx, byte[] xonly32, int network, byte[] addr, ref nuint len);

        // WIF
        [DllImport(Lib)] internal static extern int ufsecp_wif_encode(IntPtr ctx, byte[] privkey, int compressed, int network, byte[] wif, ref nuint len);
        [DllImport(Lib)] internal static extern int ufsecp_wif_decode(IntPtr ctx, [MarshalAs(UnmanagedType.LPUTF8Str)] string wif, byte[] privkey32, out int compressed, out int network);

        // BIP-32
        [DllImport(Lib)] internal static extern int ufsecp_bip32_master(IntPtr ctx, byte[] seed, nuint len, byte[] key82);
        [DllImport(Lib)] internal static extern int ufsecp_bip32_derive(IntPtr ctx, byte[] parent82, uint index, byte[] child82);
        [DllImport(Lib)] internal static extern int ufsecp_bip32_derive_path(IntPtr ctx, byte[] master82, [MarshalAs(UnmanagedType.LPUTF8Str)] string path, byte[] key82);
        [DllImport(Lib)] internal static extern int ufsecp_bip32_privkey(IntPtr ctx, byte[] key82, byte[] privkey32);
        [DllImport(Lib)] internal static extern int ufsecp_bip32_pubkey(IntPtr ctx, byte[] key82, byte[] pubkey33);

        // Taproot
        [DllImport(Lib)] internal static extern int ufsecp_taproot_output_key(IntPtr ctx, byte[] internalX, byte[]? merkleRoot, byte[] outputX, out int parity);
        [DllImport(Lib)] internal static extern int ufsecp_taproot_tweak_seckey(IntPtr ctx, byte[] privkey, byte[]? merkleRoot, byte[] tweaked32);
        [DllImport(Lib)] internal static extern int ufsecp_taproot_verify(IntPtr ctx, byte[] outputX, int parity, byte[] internalX, byte[]? merkleRoot, nuint mrLen);
    }

    // ── Main class ─────────────────────────────────────────────────────

    /// <summary>
    /// Context-based wrapper around the ufsecp C ABI. Implements IDisposable.
    /// </summary>
    public sealed class Ufsecp : IDisposable
    {
        private IntPtr _ctx;
        private bool _disposed;

        public Ufsecp()
        {
            Throw(Native.ufsecp_ctx_create(out _ctx), "ctx_create");
        }

        public void Dispose()
        {
            if (!_disposed && _ctx != IntPtr.Zero)
            {
                Native.ufsecp_ctx_destroy(_ctx);
                _ctx = IntPtr.Zero;
                _disposed = true;
            }
        }

        // ── Version ────────────────────────────────────────────────────

        public static uint Version => Native.ufsecp_version();
        public static uint AbiVersion => Native.ufsecp_abi_version();
        public static string VersionString => Marshal.PtrToStringUTF8(Native.ufsecp_version_string()) ?? "";

        public int LastError { get { Alive(); return Native.ufsecp_last_error(_ctx); } }
        public string LastErrorMsg { get { Alive(); return Marshal.PtrToStringUTF8(Native.ufsecp_last_error_msg(_ctx)) ?? ""; } }

        // ── Key operations ─────────────────────────────────────────────

        public byte[] PubkeyCreate(byte[] privkey)
        {
            Chk(privkey, 32, nameof(privkey)); Alive();
            var pub = new byte[33];
            Throw(Native.ufsecp_pubkey_create(_ctx, privkey, pub), nameof(PubkeyCreate));
            return pub;
        }

        public byte[] PubkeyCreateUncompressed(byte[] privkey)
        {
            Chk(privkey, 32, nameof(privkey)); Alive();
            var pub = new byte[65];
            Throw(Native.ufsecp_pubkey_create_uncompressed(_ctx, privkey, pub), nameof(PubkeyCreateUncompressed));
            return pub;
        }

        public byte[] PubkeyParse(byte[] pubkey)
        {
            Alive();
            var pub = new byte[33];
            Throw(Native.ufsecp_pubkey_parse(_ctx, pubkey, (nuint)pubkey.Length, pub), nameof(PubkeyParse));
            return pub;
        }

        public byte[] PubkeyXonly(byte[] privkey)
        {
            Chk(privkey, 32, nameof(privkey)); Alive();
            var x = new byte[32];
            Throw(Native.ufsecp_pubkey_xonly(_ctx, privkey, x), nameof(PubkeyXonly));
            return x;
        }

        public bool SeckeyVerify(byte[] privkey) { Chk(privkey, 32, nameof(privkey)); Alive(); return Native.ufsecp_seckey_verify(_ctx, privkey) == 0; }

        public byte[] SeckeyNegate(byte[] privkey)
        {
            Chk(privkey, 32, nameof(privkey)); Alive();
            var buf = (byte[])privkey.Clone();
            Throw(Native.ufsecp_seckey_negate(_ctx, buf), nameof(SeckeyNegate));
            return buf;
        }

        public byte[] SeckeyTweakAdd(byte[] privkey, byte[] tweak)
        {
            Chk(privkey, 32, nameof(privkey)); Chk(tweak, 32, nameof(tweak)); Alive();
            var buf = (byte[])privkey.Clone();
            Throw(Native.ufsecp_seckey_tweak_add(_ctx, buf, tweak), nameof(SeckeyTweakAdd));
            return buf;
        }

        public byte[] SeckeyTweakMul(byte[] privkey, byte[] tweak)
        {
            Chk(privkey, 32, nameof(privkey)); Chk(tweak, 32, nameof(tweak)); Alive();
            var buf = (byte[])privkey.Clone();
            Throw(Native.ufsecp_seckey_tweak_mul(_ctx, buf, tweak), nameof(SeckeyTweakMul));
            return buf;
        }

        // ── ECDSA ──────────────────────────────────────────────────────

        public byte[] EcdsaSign(byte[] msgHash, byte[] privkey)
        {
            Chk(msgHash, 32, nameof(msgHash)); Chk(privkey, 32, nameof(privkey)); Alive();
            var sig = new byte[64];
            Throw(Native.ufsecp_ecdsa_sign(_ctx, msgHash, privkey, sig), nameof(EcdsaSign));
            return sig;
        }

        public bool EcdsaVerify(byte[] msgHash, byte[] sig, byte[] pubkey)
        {
            Chk(msgHash, 32, nameof(msgHash)); Chk(sig, 64, nameof(sig)); Chk(pubkey, 33, nameof(pubkey)); Alive();
            return Native.ufsecp_ecdsa_verify(_ctx, msgHash, sig, pubkey) == 0;
        }
